# big-token-saver

./: .editorconfig  .gitignore  .npmignore  .releaserc  AGENTS.md  CLAUDE.md  CONVENTIONS.md  Cargo.toml  LICENSE  README.md  install.sh  mise.toml  package.json  rust-toolchain.toml
.github/workflows/: ci-cd.yml  ci.yml  codeql.yml  release.yml
crates/bts-map/: Cargo.toml  NOTICE  deny.toml
crates/bts-map/queries/: c-tags.scm  cpp-tags.scm  swift-tags.scm
crates/bts-map/src/: error.rs  feedback.rs  graph.rs  main.rs  render.rs  tags.rs
crates/bts-map/tests/fixtures/: expected_snapshot.txt  greeter.go  greeter.java  greeter.py  greeter.rs  greeter.ts
specs/: execution-status.yaml  release-plan.yaml  state.yaml  success-criteria.yaml
specs/adr/: 0001-pivot-to-toolchain-bootstrapper.md  0002-install-upstream-never-bundle.md  0003-rtk-sqz-via-ubi.md  0004-shell-first-rust-only-for-map.md  0005-bts-map-port-and-grammar-pinning.md
specs/archive/spikes/: SPIKE-bts-map.md
specs/bugs/: BUG-20260618-spec-metadata.md  BUG-20260618T020500-map-dot-root.md  BUG-20260618T044939-stdin-flag.md  BUG-20260622T170000-install-pipe.md  BUG-20260622T180000-release-red.md  BUG-20260622T193000-fd-intel-mac.md  BUG-20260622T200000-install-bts.md  BUG-20260709-release-branch-stale.md  registry.yaml
specs/epics/: e01-installer.yaml  e02-dispatcher.yaml  e03-init.yaml  e04-verbs.yaml  e05-map.yaml  e06-share.yaml  e07-backlog.yaml  e08-agent-wiring.yaml
specs/epics/e06-share/: e06s03-npm-distribution.md  e06s03-tasks.yaml
specs/metrics/: cycle-times.yaml
specs/plans/: TECH_STACK_LATEST.md
specs/requirements/: SCOPE_LATEST.yaml  VISION_LATEST.yaml
specs/security/epics/e08/: THREAT_MODEL.md
specs/tech-architecture/: tech-stack.md
specs/verifications/: e06s03-verify.yaml
