[package]
name = "bts-map"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"

[[bin]]
name = "bts-map"
path = "src/main.rs"

[dependencies]
tree-sitter          = "=0.24.6"
tree-sitter-rust     = "=0.23.2"
streaming-iterator   = "0.1"
clap                 = { version = "4", features = ["derive"] }
petgraph             = "0.6"
thiserror            = "1"
anyhow               = "1"
